homework02/smyoa-httpserver-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpserver-svc
  namespace: smyoa-apps-app1
spec:
  selector:
    app: "httpserver"
  type: NodePort
  ports:
    - name: httpserver-svc
      port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 30080
